Added display of area of effect and targeted attacks.